

<resources>
    <integer name="dbVersion">3</integer>
    <string name="app_name">Todo</string>
    <string name="add_task">New Task</string>
    <string name="edit_task">Edit Task</string>
    <string name="no_internet_connection">Remote DB synchronisation failed! Check your internet connection</string>
    <string name="tasks_retrieved_from_remote_db">Tasklist loaded from firebase db</string>
    <string name="tasks_saved_to_remote_db">Tasks saved to firebase db</string>
    <string name="remote_tasks_successfully_synced">remote db successfully synced</string>
    <string name="task_marked_complete">Task marked complete</string>
    <string name="task_marked_favorite">Task marked as favorite</string>
    <string name="task_marked_unfavored">Task not a favorite anymore</string>
    <string name="task_marked_active">Task marked active</string>
    <string name="loading_tasks_error">Error while loading tasks</string>
    <string name="completed_tasks_cleared">Completed tasks cleared</string>
    <string name="all_local_tasks_deleted">All tasks have been deleted from local db</string>
    <string name="all_remote_tasks_deleted">All tasks have been deleted from remote db</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_clear">Clear completed</string>
    <string name="menu_delete_task">Delete task</string>
    <string name="navigation_view_header_title">Todooo</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Enter your task here.</string>
    <string name="empty_task_message">TO DOs cannot be empty</string>
    <string name="successfully_saved_task_message">Task saved</string>
    <string name="list_title">Task List</string>
    <string name="statistics_title">Statistics</string>
    <string name="statistics_no_tasks">You have no tasks.</string>
    <string name="statistics_active_tasks">Active tasks: %.1f%%</string>
    <string name="statistics_completed_tasks">Completed tasks: %.1f%%</string>
    <string name="statistics_error">Error loading statistics.</string>
    <string name="no_data">No data</string>
    <string name="loading">LOADING</string>

    <string-array name="list_tasks_array">
        <item>@string/nav_all</item>
        <item>@string/nav_active</item>
        <item>@string/nav_completed</item>
    </string-array>
    <string name="nav_all">All</string>
    <string name="nav_active">Active</string>
    <string name="nav_completed">Completed</string>
    <string name="nav_favorite">Favorite</string>
    <string name="nav_sort">sort Tasks</string>
    <string name="label_all">All Tasks</string>
    <string name="label_active">Active Tasks</string>
    <string name="label_completed">Completed Tasks</string>
    <string name="label_favorite">Important Tasks</string>
    <string name="label_sorted_date">Tasks sorted by expiry</string>
    <string name="label_sorted_name">Tasks sorted by name</string>
    <string name="label_sorted_id">Tasks sorted by id</string>
    <string name="no_tasks_all">You have no tasks!</string>
    <string name="no_tasks_active">You have no active tasks!</string>
    <string name="no_tasks_completed">You have no completed tasks!</string>
    <string name="no_favorite_tasks">You have no important tasks!</string>
    <string name="sorted_tasks">Tasks sorted by date</string>
    <string name="refresh">Refresh</string>
    <string name="successfully_deleted_task_message">Task was deleted</string>
    <string name="successfully_added_task_message">Task added</string>
    <string name="no_data_description"/>
    <string name="no_due_date_set">set a date here</string>
    <string name="no_time_set">set time here</string>
    <string name="due_date_hint">set date here</string>
    <string name="time_hint">set time here</string>
    <string name="no_contact_hint">no contacts added yet</string>
    <string name="no_contact_permission">You don\'t have access to your contacts</string>
    <string name="synchronize">synchronize databases</string>
    <string name="save_to_local">transfer tasks to local db</string>
    <string name="save_to_remote">transfer tasks to remote db</string>
    <string name="delete_all_db_tasks">delete all tasks from local db</string>
    <string name="delete_all_remote_tasks">delete all tasks from remote db</string>
    <string name="clear_app_data">clear app data</string>
    <string name="log_out">log out</string>
    <string name="log_in">log in</string>

    <!-- Firebase actions -->
    <string name="user_created">Your registration has been successful</string>
    <string name="create_user_failed">Registration failed</string>
    <string name="user_logged_in">Login successful</string>
    <string name="login_failed">Login failed</string>
    <string name="logout_successful">You have been logged out!</string>

    <!-- register Login -->
    <string name="logo">Login Logo</string>
    <string name="email">Enter your email here</string>
    <string name="password">Your password</string>
    <string name="remember_me">remember me for next sign in</string>
    <string name="stay_logged_in">keep me logged in</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="register_link_text">Don\'t have an account yet, register here</string>
    <string name="synchronization_failed">Synchronization failed: You are not logged in!</string>
    <string name="taskId_missing">Error: task id couldn\'t be generated</string>
    <string name="no_tasks_on_local_db">no tasks found on local database</string>
    <string name="remote_db_empty">Couldn\'t load task from remote db. Db is empty!</string>
    <string name="local_db_empty">Couldn\'t load tasks from db. Db is empty!</string>

    <string name="error_accessing_local_db">An error has occurred while loading tasks from your local db!</string>

</resources>
